# Mini-Editor

./: .gitignore  CMakeLists.txt  README.md  build.py  config.json
.github/workflows/: build.yml  build_and_release.yml  build_and_test.yml  c-cpp.yml
src/: main.cpp
src/Console/: Console.cpp  Console.hpp  ConsoleInterface.hpp
src/Console/Unix/: Console.cpp
src/Console/Windows/: Console.cpp
src/Editor/: Editor.cpp  Editor.hpp
src/EventHandler/: EventHandler.hpp
src/EventHandler/Unix/: EventHandler.cpp
src/EventHandler/Windows/: EventHandler.cpp
src/File/: File.cpp  File.hpp
src/FindAndReplace/: FindAndReplace.cpp  FindAndReplace.hpp
src/FindString/: FindString.cpp  FindString.hpp
src/Input/: GetInputImpl.hpp  Input.cpp  Input.hpp  InputImpl.hpp
src/Input/Unix/: GetInputImpl.cpp  InputImpl.cpp
src/Input/Windows/: GetInputImpl.cpp  InputImpl.cpp
src/KeyActions/: KeyActions.hh
src/Renderer/: Renderer.cpp  Renderer.hpp
src/SyntaxHighlight/: SyntaxHighlight.cpp  SyntaxHighlight.hpp  config.json
src/SyntaxHighlight/GetProgramPath/: GetProgramPath.hpp
src/SyntaxHighlight/GetProgramPath/Unix/: GetProgramPath.cpp
src/SyntaxHighlight/GetProgramPath/Windows/: GetProgramPath.cpp
src/SyntaxHighlight/JsonParser/: JsonParser.cpp  JsonParser.hpp
src/Utility/GetProgramPath/: GetProgramPath.hpp
src/Utility/GetProgramPath/Unix/: GetProgramPath.cpp
src/Utility/GetProgramPath/Windows/: GetProgramPath.cpp
src/Utility/JsonParser/: JsonParser.cpp  JsonParser.hpp
tests/: CMakeLists.txt  config.json  test.cpp  testFile.txt  testJson.json  testsMain.cpp
tests/ConsoleTests/: ConsoleTests.cpp
tests/EditorTests/: EditorTests.cpp
tests/FileTests/: FileTests.cpp
tests/FindAndReplaceTests/: FindAndReplaceTests.cpp
tests/FindStringTests/: FindStringTests.cpp
tests/GetProgramPathTests/: GetProgramPathTests.cpp
tests/InputTests/: InputTests.cpp
tests/JsonParserTests/: JsonParserTests.cpp
tests/MockClasses/: MockConsole.hpp
tests/RendererTests/: RendererTests.cpp
tests/SyntaxHighlightTests/: SyntaxHighlightTests.cpp
